# Assigment5-AIAgent-AI-Enabled-Python-

./: .gitignore  Makefile  chat.html  main.py  pyproject.toml  run.py  test.html
alembic/: env.py
alembic/versions/: 9cb447abe62e_initial_migration.py  9ddc38897b90_add_chat_sessions_and_messages.py
app/: main.py
app/api/routes/: agent.py  tools.py
app/core/: config.py
app/db/: database.py  models.py
app/schemas/: agent.py  tool.py
app/services/: agent_service.py  llm_service.py  session_service.py  tool_service.py
app/tools/: calculator.py  text_analyzer.py  word_counter.py
